--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mysql2": "^3.6.0",
     "sequelize": "^6.32.1",
     "validator": "^13.11.0"
+  },
+  "engines": {
+    "node" : ">=16.14"
   }
 }
